--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -51,7 +51,7 @@
 
     "popMenuOptionScreen": "{OptionScreen, select, favorites{Favoritos} settings{Ajustes} about{About} other{other}}",
 
-    "aboutSubtitle": "#### METABUSCADOR DE FOTOS EN LAS MEJORES PLATAFORMAS DE IMÁGENES",
+    "aboutSubtitle": "#### METABUSCADOR DE FOTOS: BUSCA EN LOS MEJORES BANCOS DE IMÁGENES, ENCUENTRA EN PHOTOTOOK",
     "aboutIntro1": "**PhotoTook** busca fotos en las mejores plataformas de imágenes, como Unsplash, Pexels, Flickr, Pixabay y Openverse. En futuras revisiones, es posible que estas fuentes se modifiquen o amplíen.",
     "aboutIntro2": "La aplicación accede a las fotos de las plataformas a través de su API y no tiene relación oficial con ninguna de ellas. Cada plataforma es propietaria de su marca registrada y logotipo y esta aplicación no está patrocinada ni respaldada por ninguna.",
     "aboutIntro3": "La app permite utilizar algunos filtros para buscar fotos, como el color predominante y la orientación, aunque no todas las plataformas soportan estos filtros.",
