settings: new search depth level

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -35,6 +35,12 @@
     "settingsSize": "Size",
     "settingsSavedSettings": "Saved settings",
     "settingsSave": "Save settings",
+    "settingsLevel": "Search depth level",
+    "settingsLevelInfo1": "The depth level determines the maximum number of images per page. This influences the loading time (along with other factors, such as Internet connection and image size). It can also affect the number of requests sent to the server.",
+    "settingsLevelInfo2": "The low level gets images faster (maximum 100 per page) but requires more requests to get more results.",
+    "settingsLevelInfo3": "The top level may take longer to load, but you get more images in a single request (all those supported by each platform, over 800 in total).",
+    "settingsLevelInfo4": "The average level is more balanced, obtaining a maximum of 300 images per page.",
+    "settingsLevelInfoClose": "Close",
 
     "singleFavoriteAdd": "Added favorite",
     "singleFavoriteDeleted": "Deleted favorite",
@@ -48,6 +54,7 @@
     "singleGetError": "There was an error getting the photos",
     "singleNoTitle": "No title",
     "singleFiletypeError": "Process aborted: unable to determine the image format",
+    "singleDownloadCancel": "Download process cancelled",
 
     "cardViewError": "There was an error getting the photos",
 
