--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -35,6 +35,12 @@
     "settingsSize": "Größe",
     "settingsSavedSettings": "Gespeicherte Einstellungen",
     "settingsSave": "Einstellungen speichern",
+    "settingsLevel": "Grad der Suchtiefe",
+    "settingsLevelInfo1": "Die Tiefenstufe bestimmt die maximale Anzahl von Bildern pro Seite. Dies beeinflusst die Ladezeit (zusammen mit anderen Faktoren, wie Internetverbindung und Bildgröße). Sie kann auch die Anzahl der an den Server gesendeten Anfragen beeinflussen.",
+    "settingsLevelInfo2": "Die niedrige Stufe holt die Bilder schneller (maximal 100 pro Seite), erfordert aber mehr Anfragen, um mehr Ergebnisse zu erhalten.",
+    "settingsLevelInfo3": "Das Laden der obersten Ebene kann länger dauern, aber Sie erhalten mehr Bilder in einer einzigen Anfrage (alle von jeder Plattform unterstützten Bilder, insgesamt mehr als 800).",
+    "settingsLevelInfo4": "Das durchschnittliche Niveau ist ausgeglichener und liegt bei maximal 300 Bildern pro Seite.",
+    "settingsLevelInfoClose": "Schließen Sie",
 
     "singleFavoriteAdd": "Favoriten hinzugefügt",
     "singleFavoriteDeleted": "Gelöschter Favorit",
@@ -48,6 +54,7 @@
     "singleGetError": "Es gab einen Fehler, den die Fotos zu erhalten",
     "singleNoTitle": "Kein Titel",
     "singleFiletypeError": "Prozess abgebrochen: Das Bildformat konnte nicht ermittelt werden",
+    "singleDownloadCancel": "Download-Vorgang abgebrochen",
 
     "cardViewError": "Es gab einen Fehler, den die Fotos zu erhalten",
 
